src/objects/APTS_Master_Picklist_Table__c.object
<CustomObject>
    <description>Object to hold locale wise description for codes (used for incoterm, payment term etc.) used in SAP</description>
    <fields>
        <fullName>APTS_Code_Description__c</fullName>
        <description>Field to hold the description value for code.</description>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Used_For__c</fullName>
        <description>Picklist field to determine that code in the record is being used for what.</description>
        <label>Code Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoterm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Sales Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Code__c</fullName>
        <description>Code that is being used in SAP.</description>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Reference_Id__c</fullName>
        <description>This field will store the record id of LSOFieldEntries Table record.</description>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <description>Field to hold value of Locale to determine that code and its description is for which locale.</description>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Row_Status__c</fullName>
        <label>Row Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Picklist Table</label>
    <listViews>
        <fullName>APTS_Spain_Distribution_Channel</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>contains</operation>
            <value>es</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Distribution Channel</value>
        </filters>
        <label>Spain Distribution Channel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Incoterms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>contains</operation>
            <value>es</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Incoterm</value>
        </filters>
        <label>Spain Incoterms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Local_Channels</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>contains</operation>
            <value>es</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Local Channel</value>
        </filters>
        <label>Spain Local Channels</label>
        <language>en_US</language>
    </listViews>
 <listViews>
        <fullName>APTS_Spain_Payment_Terms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>contains</operation>
            <value>es</value>
        </filters>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filters>
        <label>Spain Payment Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Sales_Office</fullName>
        <columns>NAME</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Description__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Code_Used_For__c</field>
            <operation>equals</operation>
            <value>Sales Office</value>
        </filters>
        <filters>
            <field>APTS_Locale__c</field>
            <operation>equals</operation>
            <value>es_ES</value>
        </filters>
        <label>Spain Sales Office</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Picklist Table</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Valid_Name_Format</fullName>
        <active>true</active>
        <description>Validation rule to enforce user to enter valid name for the record in the format of &quot;Code - Description&quot;, if code description is not blank. If it is blank, name should be code itself.</description>
        <errorConditionFormula>IF( NOT( ISBLANK( APTS_Code_Description__c ) ) ,  Name  &lt;&gt;  APTS_Code__c  +  &apos; - &apos;  +  APTS_Code_Description__c ,  Name  &lt;&gt;  APTS_Code__c )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name should be in format of &quot;&lt;code&gt; - &lt;description&gt;&quot;. In case of blank description, name should be &lt;code&gt; itself.</errorMessage>
    </validationRules>
</CustomObject>